Fix too long property/value in details causing horizontal scrollbar

--- a/src/catalogue/styles/Details.css
+++ b/src/catalogue/styles/Details.css
@@ -115,6 +115,9 @@
 .details-table td {
     padding: 0 1rem;
     padding-bottom: 1rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .details-table tr > td:nth-child(2) {
     font-weight: 500;
